---
source: src/rules/flake8_simplify/mod.rs
expression: diagnostics
---
- kind:
    NestedIfStatements: ~
  location:
    row: 2
    column: 0
  end_location:
    row: 4
    column: 9
  fix:
    content: "if a and b:\n    c\n"
    location:
      row: 2
      column: 0
    end_location:
      row: 5
      column: 0
  parent: ~
- kind:
    NestedIfStatements: ~
  location:
    row: 9
    column: 0
  end_location:
    row: 11
    column: 9
  fix:
    content: "elif b and c:\n    d\n"
    location:
      row: 9
      column: 0
    end_location:
      row: 12
      column: 0
  parent: ~
- kind:
    NestedIfStatements: ~
  location:
    row: 14
    column: 0
  end_location:
    row: 17
    column: 9
  fix: ~
  parent: ~
- kind:
    NestedIfStatements: ~
  location:
    row: 20
    column: 0
  end_location:
    row: 23
    column: 9
  fix:
    content: "if a and b:\n    # Fixable due to placement of this comment.\n    c\n"
    location:
      row: 20
      column: 0
    end_location:
      row: 24
      column: 0
  parent: ~
- kind:
    NestedIfStatements: ~
  location:
    row: 45
    column: 4
  end_location:
    row: 57
    column: 23
  fix:
    content: "    if True and True:\n        \"\"\"this\nis valid\"\"\"\n\n        \"\"\"the indentation on\n            this line is significant\"\"\"\n\n        \"this is\" \\\n\"allowed too\"\n\n        (\"so is\"\n\"this for some reason\")\n"
    location:
      row: 45
      column: 0
    end_location:
      row: 58
      column: 0
  parent: ~
- kind:
    NestedIfStatements: ~
  location:
    row: 61
    column: 0
  end_location:
    row: 73
    column: 23
  fix:
    content: "if True and True:\n    \"\"\"this\nis valid\"\"\"\n\n    \"\"\"the indentation on\n        this line is significant\"\"\"\n\n    \"this is\" \\\n\"allowed too\"\n\n    (\"so is\"\n\"this for some reason\")\n"
    location:
      row: 61
      column: 0
    end_location:
      row: 74
      column: 0
  parent: ~
- kind:
    NestedIfStatements: ~
  location:
    row: 77
    column: 4
  end_location:
    row: 81
    column: 32
  fix:
    content: "    if node.module and (node.module == \"multiprocessing\" or node.module.startswith(\n        \"multiprocessing.\"\n    )):\n        print(\"Bad module!\")\n"
    location:
      row: 77
      column: 0
    end_location:
      row: 82
      column: 0
  parent: ~
- kind:
    NestedIfStatements: ~
  location:
    row: 84
    column: 0
  end_location:
    row: 88
    column: 28
  fix:
    content: "if node.module and (node.module == \"multiprocessing\" or node.module.startswith(\n    \"multiprocessing.\"\n)):\n    print(\"Bad module!\")\n"
    location:
      row: 84
      column: 0
    end_location:
      row: 89
      column: 0
  parent: ~

